fixed the bug of overflow

--- a/week1/src/rwd.sass
+++ b/week1/src/rwd.sass
@@ -14,6 +14,9 @@
 // behavior of below 600
 @media screen and (max-width: 600px)
   body
+    overflow-x: hidden
+    #sidebar
+      display: block
     #nav
       .items
         overflow: hidden
