--- a/week1/src/style.sass
+++ b/week1/src/style.sass
@@ -24,8 +24,10 @@ html
   background-color: white
   box-shadow: -1px 0px 20px 1px
   transition: .4s
+  transition-delay: 0s
   transform: translateX(120%)
   transition-timing-function: ease-in-out
+  display: none
   .container
     width: 50vw
     height: 100vh
